HelloUltraviolet/Fixtures/RejectedSource/Statements/ExpressionStatementsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the ExpressionStatementsDiagnostic rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "diag.18.ExpressionStatements")
